--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Cayman-Dark Theme
 description: Cayman-Dark is a dark mode adaptation of Cayman.
 show_downloads: true
 google_analytics:
-remote_theme: lewismiddleton/cayman-dark
+remote_theme: chris1111/cayman-dark
